--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,13 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Criar artefato para deploy
-        uses: actions/upload-pages-artifact@v3  # Pode tentar também @v2 se funcionar
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./  # Certifique-se de que está apontando para o diretório correto (./ significa raiz do repositório)
+
+      - name: Publicar no GitHub Pages
+        uses: actions/deploy-pages@v4
+
         with: 
           path: .
 
