--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    environment: production  # Defina o ambiente aqui, pode ser 'production', 'staging', etc.
+
     steps:
       - name: Checkout do repositório
         uses: actions/checkout@v4
@@ -28,9 +30,6 @@ jobs:
 
       - name: Publicar no GitHub Pages
         uses: actions/deploy-pages@v4
-
         with: 
           path: .
 
-      - name: Publicar no GitHub Pages
-        uses: actions/deploy-pages@v4
